...
                                    <rect key="frame" x="0.0" y="0.0" width="199" height="23"/>
                                    <subviews>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Country Name -" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vWe-m6-swJ">
                                            <rect key="frame" x="0.0" y="0.0" width="122.33333333333333" height="20.333333333333332"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                    <rect key="frame" x="0.0" y="49" width="141.33333333333334" height="23"/>
                                    <subviews>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Region -" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qIk-n5-yap">
                                            <rect key="frame" x="0.0" y="0.0" width="64.666666666666671" height="23"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                    <rect key="frame" x="0.0" y="98" width="169.33333333333334" height="23"/>
                                    <subviews>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Population -" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k5l-Up-5Oa">
                                            <rect key="frame" x="0.0" y="0.0" width="92.666666666666671" height="23"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                    <rect key="frame" x="0.0" y="147" width="141.66666666666666" height="23"/>
                                    <subviews>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Capital -" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vF8-bT-EXr">
                                            <rect key="frame" x="0.0" y="0.0" width="65" height="23"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                    </constraints>
                                </view>
                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Flag" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Jz-V3-p2A">
                                    <rect key="frame" x="0.0" y="224" width="32.333333333333336" height="20.333333333333343"/>
                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                    </constraints>
                                </imageView>
                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Map" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H9x-u8-XxC">
                                    <rect key="frame" x="0.0" y="596.33333333333337" width="33.333333333333336" height="20.333333333333371"/>
                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
